# Cpp-programming-language

./: .gitignore
Arkanoid/: Arkanoid.sln
Arkanoid/Arkanoid/: Arkanoid.vcxproj  Ball.cpp  Ball.h  Block.cpp  Block.h  Player.cpp  Player.h  Rectangle.h  main.cpp
Calculator/: Calculator.sln
Calculator/Calculator/: CMakeLists.txt  Calc.cpp  Calc.h  Calculator.vcxproj  Operation.cpp  Operations.h  PluginLoader.cpp  PluginLoader.h  main.cpp
Calculator/Calculator/plugins/: cos.cpp  ln.cpp  sqrt.cpp  tg.cpp
engine/: engine.cpp  engine.h  main.cpp  wrapper.cpp  wrapper.h
factory_stack/: CMakeLists.txt
geom/: geom.sln
geom/geom/: geom.cpp  geom.vcxproj
inheritance/: MathExamModeling.cpp  inheritance.sln
inheritance/inheritance/: MathExamModeling.cpp  inheritance.vcxproj
quadratic/: quadratic.cpp  quadratic.sln
quadratic/quadratic/: quadratic.vcxproj  quadratic.vcxproj.filters
